--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "restaurant",
+  "name": "chatfood",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://iamhaaamed.github.io/restaurant/",
+  "homepage": "https://iamhaaamed.github.io/chatfood/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
